# logscale-tools

./: .gitignore  CLAUDE.md  README.md  grammar.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: developing.md  library.md
src/logscale_query_language/: __init__.py  cli.py  formatter.py  parser.py
src/logscale_query_language/queries/: logscale.scm
tests/: test_cli.py  test_formatter.py  test_parser.py
tree-sitter-logscale/: grammar.js  package-lock.json  package.json  tree-sitter.json
tree-sitter-logscale/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-logscale/test/corpus/: advanced.txt  expressions.txt  filters.txt  functions.txt  pipeline.txt  shorthands.txt
