[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logscale-tools"
version = "0.1.5"
description = "A tree-sitter parser and topiary-based formatter for the CrowdStrike LogScale query language"
requires-python = ">=3.14"
dependencies = ["tree-sitter>=0.23.0"]

[project.scripts]
logscale-query = "logscale_query_language.cli:main"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pyrefly",
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tree-sitter-logscale/src/",
    "hatch_build.py",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/logscale_query_language"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.pyrefly]
project-includes = ["src/**/*.py", "tests/**/*.py"]
project-excludes = ["**/__pycache__/**"]
python-version = "3.14"
search-path = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
